syntax = "proto3";

package deck;

option go_package = "github.com/hijjiri/simulator/core/deck";

message Decks {
    Deck simulate_offense_deck = 1;
    Deck simulate_defense_deck = 2;
}

message Deck {
    repeated DeckUnit units = 1;
}

message DeckUnit {
    uint32 hero_id = 1;
    repeated uint32 extension_ids = 2;
    repeated int32 skill_orders = 3;
    int32 hero_active_index = 4;
}
